--- a/diazotheme/colonialart/diazo_resources/static/main.css
+++ b/diazotheme/colonialart/diazo_resources/static/main.css
@@ -31,11 +31,11 @@ color: red;
     text-decoration: none;
 }
 table.citem {
-    background-color: #7A663B;
+    background-color: #fff;
 }
 table.active {
     background-color: #fff;
-    box-shadow: 0 0 20px #000;
+    box-shadow: 0 0 10px #834B2D;
 }
 .items a div {
     float: left;
@@ -43,10 +43,10 @@ table.active {
     padding-right: 4px;
 }
 .citem img {
-    vertical-align: bottom;
+    vertical-align: middle;
 }
 .citem a:first-child {
-  margin-right: 6px;
+  margin-right: 4px;
 }
 .cblock {
     width: 840px;
@@ -103,8 +103,9 @@ element stays still.
   overflow:hidden;
   width: 840px;
   height: 152px;
-  background-color: #834B2D;
+  background-color: #fff;
   float: left;
+  border: 1px solid #834B2D;
 }
 
 /*
@@ -138,7 +139,7 @@ table.citem:last-child {
   margin: 0;
 }
 .items .citem tr {
-  vertical-align: bottom;
+  vertical-align: middle;
 }
 table.citem td {
     height: 128px;
@@ -148,7 +149,7 @@ table.citem td {
     width: 840px;
     margin: 0 24px;
     text-align: center;
-    background-color:#834B2D;
+    background-color: #fff;
     padding-bottom: 4px;
 }
 .navi {
@@ -161,14 +162,12 @@ table.citem td {
     /* dimensions */
     display: block;
     width: 840px;
-    height: 420px;
+    height: 440px;
     float: left;
     padding: 15px 0;
     text-align:center;
-    background-color:#834B2D;
-}
-#image_wrap img {
-    box-shadow: 0 0 20px #000;
+    background-color: #fff;
+    border: 1px solid #834b2d;
 }
 .cdiv {
     display: inline-block;
@@ -196,7 +195,7 @@ table.citem td {
 }
 
 #image_wrap td a {
-    color: #fff !important;
+    color: #7A663B !important;
 }
 #image_wrap td {
   padding-top: 12px;
@@ -222,4 +221,25 @@ table.citem td {
 }
 .archive_list ul li.aparent.hidden:before {
     content: " + ";
+}
+
+.cdiv {
+    display: inline-block;
+}
+#content table.preview-image-wrapper {
+    height: 400px;
+    border-collapse: separate;
+    border-spacing: 6px;
+}
+.preview-image-wrapper th {
+    height: 400px;
+    vertical-align: middle;
+    text-align: center;
+}
+.preview-image-wrapper td {
+    text-align: center;
+    max-width: 400px;
+}
+.bdiv {
+    margin: 0 auto;
 }
