--- a/diazotheme/colonialart/diazo_resources/static/main.css
+++ b/diazotheme/colonialart/diazo_resources/static/main.css
@@ -163,7 +163,7 @@ table.citem td {
     /* dimensions */
     display: block;
     width: 900px;
-    height: 440px;
+    min-height: 440px;
     float: left;
     padding: 15px 0;
     text-align:center;
@@ -262,4 +262,18 @@ table.citem td {
 }
 .artwork_view dl {
     margin-bottom: 1em;
+}
+
+#content div.bdiv h1 {
+    margin-top: 0;
+}
+
+.pb-ajax h1, .pb-ajax h2, .pb-ajax h3, .pb-ajax dt, .pb-ajax a, .pb-ajax a:link, .pb-ajax a:visited,
+#content h1, #content h2, #content h3, #content a, #content a:link, #content a:visited {
+    color: #7A663B;
+}
+
+div.listingBar a {
+    color: #7A663B;
+    border-color: #7a663b;
 }
