--- a/diazotheme/colonialart/diazo_resources/static/main.css
+++ b/diazotheme/colonialart/diazo_resources/static/main.css
@@ -188,10 +188,10 @@ table.citem td {
     cursor: pointer;
 }
 .previmage {
-    background: url(nav-left.png) no-repeat 0 50%;
+    background: url(nav-left.png) no-repeat 0 25%;
 }
 .nextimage {
-    background: url(nav-right.png) no-repeat 0 50%;
+    background: url(nav-right.png) no-repeat 0 25%;
 }
 
 #image_wrap td a {
@@ -201,6 +201,9 @@ table.citem td {
   padding-top: 12px;
 }
 
+.archive_list {
+    font-size: 150%;
+}
 .archive_list ul {
     display: none;
     cursor: pointer;
@@ -231,6 +234,9 @@ table.citem td {
     vertical-align: top;
     text-align: center;
 }
+.preview-image-wrapper th img {
+    margin-bottom: 0.5em;
+}
 .preview-image-wrapper td {
     text-align: center;
     max-width: 400px;
@@ -247,6 +253,7 @@ table.citem td {
 #preview_wrapper {
     border: 1px solid #834b2d;
     width: 100%;
+    height: 540px;
 }
 
 .pb-ajax .artwork_view h1 {
@@ -254,14 +261,19 @@ table.citem td {
     border-bottom: 1px solid #834b2d;
 }
 .pb-ajax .artwork_view img {
-    float: left;
     padding: 0 1em 1em 0;
 }
 .artwork_view dt {
     font-size: 125%;
 }
+.artwork_view dd {
+    text-align: justify;
+}
 .artwork_view dl {
     margin-bottom: 1em;
+}
+.artwork_view a img {
+    cursor: zoom-in;
 }
 
 #content div.bdiv h1 {
@@ -272,8 +284,15 @@ table.citem td {
 #content h1, #content h2, #content h3, #content a, #content a:link, #content a:visited {
     color: #7A663B;
 }
+#content a:hover {
+    color: #834b2d !important;
+}
 
 div.listingBar a {
     color: #7A663B;
     border-color: #7a663b;
+}
+
+#content a.link-overlay {
+    border-bottom: none !important;
 }
