Avoid double display of artwork title

--- a/diazotheme/colonialart/diazo_resources/static/main.css
+++ b/diazotheme/colonialart/diazo_resources/static/main.css
@@ -423,3 +423,7 @@ body.template-folder_listing.section-galleries #content-core dt {
 body.template-folder_listing.section-galleries #content-core dt span.summary:before {
     content: " \2756 ";
 }
+
+body.template-artwork_view div.documentDescription {
+    display: none;
+}
