--- a/diazotheme/colonialart/diazo_resources/static/main.css
+++ b/diazotheme/colonialart/diazo_resources/static/main.css
@@ -24,8 +24,8 @@ color: red;
 }
 
 #portal-globalnav li a {
-  padding: 0.5em 0.5em;
-  text-align: center;
+  padding: 0.5em 1.5em;
+  min-width: 0;
 }
 
 }
